# AI-PR-Review-Assistant

./: .gitignore  LICENSE  README.md  pyproject.toml
ai_pr_review/: __init__.py  ai_client.py  cli.py  config.py  context_builder.py  dashboard.py  github_client.py  github_commenter.py  models.py  patch_parser.py  report.py  review_engine.py  risk_rules.py
ai_pr_review/scanners/: __init__.py  bandit.py  base.py
ai_pr_review/static/: dashboard.css
ai_pr_review/templates/: dashboard.html
docs/: champion_sprint_plan_2026-05-29.md  competition_faq_notes.md  demo_script.md  evaluation.md  master_build_plan.md  problem_statement.md  stage_summary_2026-05-29.md
examples/: github-action.yml  sample_report.json  sample_report.md  sample_report.sarif
scripts/: make_demo_video.py
tests/: test_cli.py  test_config.py  test_context_builder.py  test_dashboard.py  test_github_action_example.py  test_github_client.py  test_github_commenter.py  test_patch_parser.py  test_pr_url.py  test_report.py  test_review_engine.py  test_risk_rules.py  test_scanners.py  test_submission_materials.py
