[project]
name = "ai-pr-review-assistant"
version = "0.1.0"
description = "AI-assisted GitHub Pull Request review tool for competition submission."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.93.0",
  "requests>=2.32.0",
  "typer>=0.12.0",
  "rich>=13.7.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0"
]

[project.scripts]
ai-pr-review = "ai_pr_review.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
